--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
     <div class="alert alert-success" role="alert">{{ message }}</div>
     {% endfor %}
     
-    <main>
+    <main class="noPadding">
         <div class="left_bloc">
             <!--Présentation entreprise-->
             <section>
