--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Yeah! - Accueil{% endblock %}
 
 {% block body %}
-<main class="fond">
+<main class="fond pt-85">
 {{ form_start(form) }}
  <div class="row m-3 ">
     {# premiere partie #}
