--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-   <div class="w-100 mx-auto fond">
+   <div class="w-100 mx-auto fond pt-85">
         <div class="w-50 mx-auto formulaire">
             <h1 class="text-center titre mb-4 pt-4">Inscription</h1>  
             {{ form_start(registrationForm) }}
