--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,6 +305,10 @@ main section p {
     letter-spacing: 0.030em;
   }
 
+  .pt-85{
+      padding-top: 85px;
+  }
+
   .fond {
       background-color: #ebf2e3;
   }
@@ -473,6 +477,11 @@ main section p {
 
     main {
         display: flex;
+        flex-direction: column;
+        padding: 40px;
+    }
+
+    main.noPadding {
         padding: 85px 0 0 0;
     }
 
