Je viens de virer :not(#layoutSidenav_content)  à la ligne 478 de styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -475,7 +475,7 @@ main section p {
         margin: 0;
     }
 
-    main:not(#layoutSidenav_content) {
+    main{
         display: flex;
         flex-direction: column;
         padding: 40px;
