favoris pas fini

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -117,6 +117,8 @@
         <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
         {# js pour affichage de la carte #}
         <script src="{{ asset('js/map.js') }}"></script>
+        {# js pour favoris #}
+        <script src="{{ asset('js/favoris.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
