--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -146,6 +146,31 @@
                 {# Ce boutton ouvre une modal bootsrap #}
                 <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncement{{ announcement.id }}Modal">Débloquer</button>
                 
+                {# FAVORIS #}
+                {# {% if app.user %}
+                <div class="row justify-content-center">
+                <i id="{{ announcement.id }}" class="coeur las la-heart"></i>
+                </div>
+                {% endif %} #}
+
+                <div>
+                {% if is_granted("ROLE_USER") %}
+                    {% for favoris in announcement.favoris %}
+                        {% if favoris.id == app.user.id %}
+                         <i  class="lar la-heart"></i>
+                         {% else %}
+                            <i  class="las la-heart"></i>
+                        {% endif %}
+                        {% else %}
+                         <i  class="las la-heart"></i>
+                    {% endfor %}
+
+                {% else %}
+                     <i  class="las la-heart"></i>
+                {% endif %}
+                   
+                   
+                </div>
 
                 {{ include('home/_unlockAnnouncement.html.twig') }}
                 {{ include('home/_shareAnnouncement.html.twig') }}
