--- a/templates/admin/users/_delete_form.html.twig
+++ b/templates/admin/users/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('admin_users_delete', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sûr ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn darkGreyBackground mt-3">Supprimer</button>
 </form>
