--- a/templates/home/_unlockAnnouncement.html.twig
+++ b/templates/home/_unlockAnnouncement.html.twig
@@ -14,14 +14,14 @@
 
                 <div class="card_bloc_2">
                     <div class="card_category pinkBackground">
-                        <p>{{ announcement.category.name }}</p>
+                        {{ announcement.category.name }}
                     </div>
-                    <p>{{ announcement.activitySector.name }}</p>
+                    <div>{{ announcement.activitySector.name }}</div>
                     <div class="card_title">
-                        <h2>{{ announcement.title }}</h2>
+                        {{ announcement.title }}
                     </div>
                     <div class="card_text">
-                        <p>{{ announcement.description }}</p>
+                        {{ announcement.description }}
                     </div>
                 </div>
 
