--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -150,6 +150,7 @@ main section p {
 
 .search_bar .button {
     margin-top: 15px;
+    border: none;
 
 }
 
@@ -228,6 +229,7 @@ main section p {
 .buttonList .button {
     margin-bottom: 5px;
     padding: 5px 10px;
+    border: none;
     border-radius: 5px;
 }
 /*Fin Carte annonce*/
