--- a/templates/admin/activity_sector/edit.html.twig
+++ b/templates/admin/activity_sector/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edition des secteurs d'activités{% endblock %}
 
 {% block body %}
-    <h1>Edition des secteurs d'activités</h1>
+    <h1 class="pt-150">Edition des secteurs d'activités</h1>
 
     {{ include('admin/activity_sector/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
