--- a/templates/admin/activity_sector/index.html.twig
+++ b/templates/admin/activity_sector/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des Secteurs d'activités{% endblock %}
 
 {% block body %}
-    <h1>Liste des Secteurs d'activités</h1>
+    <h1 class="pt-150">Liste des Secteurs d'activités</h1>
 
     <a href="{{ path('admin_activity_sector_new') }}">Nouveau</a>
 
