--- a/templates/admin/activity_sector/new.html.twig
+++ b/templates/admin/activity_sector/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouveau secteur d'activité{% endblock %}
 
 {% block body %}
-    <h1>Nouveau secteur d'activité</h1>
+    <h1 class="pt-150">Nouveau secteur d'activité</h1>
 
     {{ include('admin/activity_sector/_form.html.twig') }}
 
