--- a/templates/admin/activity_sector/show.html.twig
+++ b/templates/admin/activity_sector/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}ActivitySector{% endblock %}
 
 {% block body %}
-    <h1>ActivitySector</h1>
+    <h1 class="pt-150">ActivitySector</h1>
 
     <table class="table">
         <tbody>
