--- a/templates/admin/categories/index.html.twig
+++ b/templates/admin/categories/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Categories index{% endblock %}
 
 {% block body %}
-    <h1>Liste des categories d'annonce</h1>
+    <h1 class="pt-150">Liste des categories d'annonce</h1>
 
     <a href="{{ path('admin_categories_new') }}">Nouvelle categorie d'annonce</a>
 
