--- a/templates/admin/subscription/edit.html.twig
+++ b/templates/admin/subscription/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edition des packs{% endblock %}
 
 {% block body %}
-    <h1>Edition des packs</h1>
+    <h1 class="pt-150">Edition des packs</h1>
 
     {{ include('admin/subscription/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
