--- a/templates/admin/subscription/new.html.twig
+++ b/templates/admin/subscription/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouveau pack{% endblock %}
 
 {% block body %}
-    <h1>Créer un nouveau pack</h1>
+    <h1 class="pt-150">Créer un nouveau pack</h1>
 
     {{ include('admin/subscription/_form.html.twig') }}
 
