--- a/templates/admin/users/edit.html.twig
+++ b/templates/admin/users/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edition des rôles des utilisateurs{% endblock %}
 
 {% block body %}
-<main class="fond"> 
+<main class="fond pt-150"> 
     
     <div class="col-sm col-lg-10 mr-4 mx-auto">
         <h1>Edition des rôles des utilisateurs</h1>
