--- a/templates/admin/users/show.html.twig
+++ b/templates/admin/users/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
    
-<main class="fond">
+<main class="fond pt-150">
     <a href="{{ path('admin_users_index') }}" class="btn pinkBackground ">Retour à la liste des utilisateurs</a>
     <h1 class=" titre mb-4 pt-4 text-center">Utilisateur</h1>
     <div class="col-sm col-lg-10 mr-4 mx-auto">
