--- a/templates/admin/categories/edit.html.twig
+++ b/templates/admin/categories/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edition des categories{% endblock %}
 
 {% block body %}
-    <h1>Edition des categories</h1>
+    <h1 class="pt-150">Edition des categories</h1>
 
     {{ include('admin/categories/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
