--- a/templates/admin/categories/new.html.twig
+++ b/templates/admin/categories/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle Categorie{% endblock %}
 
 {% block body %}
-    <h1>Créer une nouvelle Categorie</h1>
+    <h1 class="pt-150">Créer une nouvelle Categorie</h1>
 
     {{ include('admin/categories/_form.html.twig') }}
 
