--- a/templates/admin/subscription/index.html.twig
+++ b/templates/admin/subscription/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Liste des Packs{% endblock %}
 
 {% block body %}
+<main>
     <h1 class="pt-150">Liste des Packs</h1>
 
     <table class="table">
@@ -38,4 +39,6 @@
     </table>
 
     <a href="{{ path('admin_subscription_new') }}">Nouveau</a>
+</main>
+    
 {% endblock %}
