--- a/templates/admin/base_admin.html.twig
+++ b/templates/admin/base_admin.html.twig
@@ -35,8 +35,7 @@
                     <div class="dropdown show">
                     {% if app.user %}
                         <div data-toggle="dropdown" title="Menu administration" id="divCustomerArea">
-                            <i class="las la-user"></i>
-                            <p>Bonjour {{ app.user.firstname }}</p>
+                            <span>Menu</span>
                         </div> 
                         <div class="dropdown-menu">
                             {% if is_granted("ROLE_ADMIN") %}
@@ -51,8 +50,6 @@
                                 <a class="dropdown-item bouton" href="{{ path('home') }}" title="Retour vers l'acceuil du site">Retour vers l'acceuil du site</a>
                                 <a class="dropdown-item bouton" href="{{ path('app_logout') }}" title="Déconnexion">Déconnexion</a>                            
                         </div>
-
-                        <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                             <a class="dropdown-item" href="{{ path('home') }}">Retour au site</a>
                             <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
