bug fix appels fichiers .js

--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -96,3 +96,11 @@
 </div>
 </main>
 {% endblock %}
+{% block javascripts %}
+    {# js pour affichage des curseurs (gamme de budget) #}
+    <script src="{{ asset('js/sliderBudget.js') }}"></script>
+    {# js pour autocomplete, API gouv #}
+    <script src="{{ asset('js/selectAutoComplete.js') }}"></script>
+{% endblock %}
+
+
