ajustement carte annonce

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -400,6 +400,10 @@ main section p {
         align-self: start;
     }
 
+    .card_sector {
+        margin-top: 10px;
+    }
+
     .card_bloc_3 {
         border-left: 1px dotted #6f7176;
         padding-left: 15px;
