--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -7,7 +7,7 @@
 
         <div class="card_bloc_2">
             <div class="card_category pinkBackground">{{ announcement.category.name }}</div>
-            <div>{{ announcement.activitySector.name }}</div>
+            <div class="card_sector">{{ announcement.activitySector.name }}</div>
             <div class="card_title">{{ announcement.title }}</div>
             <div class="card_text">{{ announcement.description }}</div>
             <div class="card_announcement">Annonce : {{ announcement.ref }}</div>
